[package]
name = "pq-falcon-sigs"
version = "0.1.0"
authors = ["chiefbiiko hello@nugget.digital>"]
edition = "2018"

[profile.release]
# fewer codegen units == smaller binary == longer compile time
codegen-units = 1
# no stack unwindin'
panic = 'abort'
# enable link time optimizations
lto = true
# optimize for size
opt-level = 'z'

[dependencies]
anyhow = "1.0.42"
atty = "0.2.14"
base64 = "0.13.0"
clap = "3.0.0-beta.2"
home = "0.5.3"
pqcrypto = "0.14.0"
pqcrypto-falcon = "0.2.5"
pqcrypto-traits = "0.3.3"