[package]
name = "falcon-cli"
version = "0.1.2"
authors = ["chiefbiiko hello@nugget.digital>"]
edition = "2018"

[[bin]]
name = "falcon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.42"
atty = "0.2.14"
base64 = "0.13.0"
clap = "3.0.0-beta.4"
home = "0.5.3"
pqcrypto = "0.14.0"
pqcrypto-falcon = "0.2.5"
pqcrypto-traits = "0.3.3"